🚀 Add Vercel deployment config
- vercel.json: Python runtime routing to api/index.py
- api/index.py: WSGI handler entry point
- build_files.sh: runs collectstatic at deploy time
- settings.py: WhiteNoise static files, dj-database-url (DATABASE_URL),
  SECRET_KEY from env, CSRF trusted origins for .vercel.app
- requirements.txt: add whitenoise, dj-database-url, psycopg2-binary

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ pillow>=11.0
 django-crispy-forms>=2.0
 crispy-bootstrap5>=2024.1
 djangorestframework>=3.16
+whitenoise>=6.8
+dj-database-url>=2.3
+psycopg2-binary>=2.9
